--- a/autoexec.CFG
+++ b/autoexec.CFG
@@ -3,7 +3,17 @@ cl_crosshaircolor 2
 cl_crosshairsize 2.5
 cl_crosshairdot 1
 cl_crosshairalpha 235
+
 viewmodel_offset_x 2
 viewmodel_offset_y -2
 viewmodel_offset_z -2
 viewmodel_fov 68
+
+sensitivity 2
+m_rawinput 1
+m_mouseaccel1 0
+m_mouseaccel2 0
+
+host_writeconfig
+echo ""
+echo "autoexec.cfg loaded, GLHF"
