--- a/autoexec.CFG
+++ b/autoexec.CFG
@@ -1,18 +1,26 @@
 cl_crosshairthickness 1.1
 cl_crosshaircolor 2
 cl_crosshairsize 2.5
-cl_crosshairdot 1
+cl_crosshairdot 0
 cl_crosshairalpha 235
 
 viewmodel_offset_x 2
 viewmodel_offset_y -2
 viewmodel_offset_z -2
 viewmodel_fov 68
+cl_viewmodel_shift_left_amt 0
+cl_viewmodel_shift_right_amt 0
+cl_bob_lower_amt 0
+cl_bobamt_lat 0
+cl_bobamt_vert 0
+cl_bobcycle 2
 
 sensitivity 2
 m_rawinput 1
 m_mouseaccel1 0
 m_mouseaccel2 0
+
+cl_righthand 1
 
 host_writeconfig
 echo ""
