--- a/autoexec.CFG
+++ b/autoexec.CFG
@@ -1,5 +1,5 @@
-cl_crosshairthickness 1.1
-cl_crosshaircolor 2
+//cl_crosshairthickness 1.1
+//cl_crosshaircolor 2
 cl_crosshairsize 2.5
 cl_crosshairdot 1
 cl_crosshairalpha 235
