--- a/autoexec.CFG
+++ b/autoexec.CFG
@@ -1,6 +1,4 @@
-cl_crosshairsize 2.5
 cl_crosshairdot 1
-cl_crosshairalpha 235
 
 viewmodel_offset_x 2
 viewmodel_offset_y -2
@@ -13,12 +11,28 @@ cl_bobamt_lat 0
 cl_bobamt_vert 0
 cl_bobcycle 2
 
-sensitivity 2
 m_rawinput 1
+sensitivity 1.05
 m_mouseaccel1 0
 m_mouseaccel2 0
+m_customaccel 0
+m_customaccel_exponent 1
+m_customaccel_max 0
+m_customaccel_scale 0
 
 cl_righthand 0
+
+cl_autowepswitch "0"
+cl_disablefreezecam "1"
+
+alias "+use_radar" "+use; cl_radar_always_centered 1; cl_radar_scale 0.8; gameinstructor_enable 1"
+alias "-use_radar" "-use; cl_radar_always_centered 0; cl_radar_scale 0.4; gameinstructor_enable 0"
+bind "e" "+use_radar"
+
+bind "MWHEELUP" "use weapon_flashbang; r_cleardecals"
+bind "MOUSE3" "use weapon_smokegrenade; r_cleardecals"
+bind "MWHEELDOWN" "use weapon_hegrenade; r_cleardecals"
+bind "MOUSE5" "use weapon_incgrenade; use weapon_molotov; r_cleardecals"
 
 host_writeconfig
 echo ""
