--- a/autoexec.CFG
+++ b/autoexec.CFG
@@ -1,3 +1,8 @@
+developer 1
+con_filter_text "Damage"
+con_filter_text_out "Player:"
+con_filter_enable 2
+
 cl_crosshairdot 1
 
 viewmodel_offset_x 2
@@ -12,7 +17,7 @@ cl_bobamt_vert 0
 cl_bobcycle 2
 
 m_rawinput 1
-sensitivity 1.05
+sensitivity 0.9
 m_mouseaccel1 0
 m_mouseaccel2 0
 m_customaccel 0
@@ -29,10 +34,10 @@ alias "+use_radar" "+use; cl_radar_always_centered 1; cl_radar_scale 0.8; gamein
 alias "-use_radar" "-use; cl_radar_always_centered 0; cl_radar_scale 0.4; gameinstructor_enable 0"
 bind "e" "+use_radar"
 
-bind "MWHEELUP" "use weapon_flashbang; r_cleardecals"
+bind "MOUSE5" "use weapon_flashbang; r_cleardecals"
 bind "MOUSE3" "use weapon_smokegrenade; r_cleardecals"
 bind "MWHEELDOWN" "use weapon_hegrenade; r_cleardecals"
-bind "MOUSE5" "use weapon_incgrenade; use weapon_molotov; r_cleardecals"
+bind "MWHEELUP" "use weapon_incgrenade; use weapon_molotov; r_cleardecals"
 
 host_writeconfig
 echo ""
