--- a/autoexec.CFG
+++ b/autoexec.CFG
@@ -41,10 +41,13 @@ bind "MOUSE5" "use weapon_smokegrenade; r_cleardecals"
 bind "MWHEELDOWN" "use weapon_hegrenade; r_cleardecals"
 bind "MWHEELUP" "use weapon_incgrenade; use weapon_molotov; r_cleardecals"
 
-bind "kp_5" "buy awp;"
-bind "kp_ins" "buy vesthelm; buy vest; buy defuser;"
-bind "kp_end" "buy m4a1; buy ak47;"
-bind "kp_downarrow" "buy smokegrenade; buy flashbang; buy molotov; buy incgrenade; buy hegrenade;"
+bind "kp_ins" " buy vesthelm; buy vest;" //num0
+bind "kp_del" " buy defuser;" //num.
+bind "kp_end" "buy m4a1; buy ak47;" //num1
+bind "kp_downarrow" " buy smokegrenade; buy flashbang; buy molotov; buy incgrenade; buy hegrenade;" //num2
+bind "kp_5" "buy awp;" //num5
+
+bind "F5" devshots_screenshot
 
 host_writeconfig
 echo "======================================================="
