update to latest

--- a/autoexec.CFG
+++ b/autoexec.CFG
@@ -3,8 +3,6 @@
 // con_filter_text_out "Player:"
 // con_filter_enable "2"
 
-cl_crosshairdot 1
-
 viewmodel_offset_x 2
 viewmodel_offset_y -2
 viewmodel_offset_z -2
@@ -17,7 +15,7 @@ cl_bobamt_vert 0
 cl_bobcycle 2
 
 m_rawinput 1
-sensitivity 0.9
+sensitivity 0.85
 zoom_sensitivity_ratio_mouse 1.0
 m_mouseaccel1 0
 m_mouseaccel2 0
@@ -46,6 +44,9 @@ bind "kp_del" " buy defuser;" //num.
 bind "kp_end" "buy m4a1; buy ak47;" //num1
 bind "kp_downarrow" " buy smokegrenade; buy flashbang; buy molotov; buy incgrenade; buy hegrenade;" //num2
 bind "kp_5" "buy awp;" //num5
+
+cl_crosshairdot 0
+cl_crosshair_sniper_width 1
 
 bind "F5" devshots_screenshot
 
