win autoexec body

--- a/autoexec_win.cfg
+++ b/autoexec_win.cfg
@@ -1,1 +1,57 @@
+// developer "1"
+// con_filter_text "Damage"
+// con_filter_text_out "Player:"
+// con_filter_enable "2"
 
+viewmodel_offset_x 2
+viewmodel_offset_y -2
+viewmodel_offset_z -2
+viewmodel_fov 68
+cl_viewmodel_shift_left_amt 0
+cl_viewmodel_shift_right_amt 0
+cl_bob_lower_amt 0
+cl_bobamt_lat 0
+cl_bobamt_vert 0
+cl_bobcycle 2
+
+m_rawinput 1
+sensitivity 0.85
+zoom_sensitivity_ratio_mouse 1.0
+m_mouseaccel1 0
+m_mouseaccel2 0
+m_customaccel 0
+m_customaccel_exponent 1
+m_customaccel_max 0
+m_customaccel_scale 0
+
+cl_righthand 0
+
+cl_autowepswitch "0"
+cl_disablefreezecam "1"
+
+alias "+use_radar" "+use; cl_radar_always_centered 1; cl_radar_scale 0.8; gameinstructor_enable 1"
+alias "-use_radar" "-use; cl_radar_always_centered 0; cl_radar_scale 0.4; gameinstructor_enable 0"
+bind "e" "+use_radar"
+
+bind "MOUSE3" "+voicerecord"
+bind "MOUSE5" "use weapon_flashbang; r_cleardecals"
+bind "MOUSE4" "use weapon_smokegrenade; r_cleardecals"
+bind "MWHEELUP" "use weapon_hegrenade; r_cleardecals"
+bind "MWHEELDOWN" "use weapon_incgrenade; use weapon_molotov; r_cleardecals"
+
+bind "kp_ins" " buy vesthelm; buy vest;" //num0
+bind "kp_del" " buy defuser;" //num.
+bind "kp_end" "buy m4a1; buy ak47;" //num1
+bind "kp_downarrow" " buy smokegrenade; buy flashbang; buy molotov; buy incgrenade; buy hegrenade;" //num2
+bind "kp_5" "buy awp;" //num5
+
+cl_crosshairdot 0
+cl_crosshair_sniper_width 1
+
+bind "F5" devshots_screenshot
+
+host_writeconfig
+echo "======================================================="
+echo "================[    welcome kaiou    ]================"
+echo "================[ autoexec.cfg loaded ]================"
+echo "======================================================="      
