add cl_show_team_equipment toggler

--- a/autoexec_win.cfg
+++ b/autoexec_win.cfg
@@ -48,6 +48,14 @@ bind "kp_5" "buy awp;" //num5
 cl_crosshairdot 0
 cl_crosshair_sniper_width 1
 
+cl_teamid_overhead_always 1
++cl_show_team_equipment
+
+bind "l" "show_team_eq"
+alias show_team_eq show_team_eq1
+alias show_team_eq1 "+cl_show_team_equipment; alias show show_team_eq2"
+alias show_team_eq2 "-cl_show_team_equipment; alias show show_team_eq1"
+
 bind "F5" devshots_screenshot
 
 host_writeconfig
