new crosshair and fix show_team_eq toggler alias

--- a/autoexec_win.cfg
+++ b/autoexec_win.cfg
@@ -53,10 +53,33 @@ cl_teamid_overhead_always 1
 
 bind "l" "show_team_eq"
 alias show_team_eq show_team_eq1
-alias show_team_eq1 "+cl_show_team_equipment; alias show show_team_eq2"
-alias show_team_eq2 "-cl_show_team_equipment; alias show show_team_eq1"
+alias show_team_eq1 "+cl_show_team_equipment; alias show_team_eq show_team_eq2"
+alias show_team_eq2 "-cl_show_team_equipment; alias show_team_eq show_team_eq1"
 
 bind "F5" devshots_screenshot
+
+cl_crosshair_drawoutline "1"
+cl_crosshair_dynamic_maxdist_splitratio "0.400000"
+cl_crosshair_dynamic_splitalpha_innermod "1"
+cl_crosshair_dynamic_splitalpha_outermod "0.3"
+cl_crosshair_dynamic_splitdist "1.500000"
+cl_crosshair_outlinethickness "0.8"
+cl_crosshair_sniper_show_normal_inaccuracy "0"
+cl_crosshair_sniper_width "1"
+cl_crosshairalpha "255"
+cl_crosshaircolor "5"
+cl_crosshaircolor_b "0"
+cl_crosshaircolor_g "255"
+cl_crosshaircolor_r "0"
+cl_crosshairdot "0"
+cl_crosshairgap "-1.000000"
+cl_crosshairgap_useweaponvalue "0"
+cl_crosshairscale "0"
+cl_crosshairsize "4"
+cl_crosshairstyle "2"
+cl_crosshairthickness "0.5"
+cl_crosshairusealpha "1"
+cl_fixedcrosshairgap "3"
 
 host_writeconfig
 echo "======================================================="
